; ModuleID = '/home/carl/AnghaBench/tmux/extr_screen.c_screen_hide_selection.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_screen.c_screen_hide_selection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.screen = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @screen_hide_selection(%struct.screen* %0) #0 {
  %2 = alloca %struct.screen*, align 8
  store %struct.screen* %0, %struct.screen** %2, align 8
  %3 = load %struct.screen*, %struct.screen** %2, align 8
  %4 = getelementptr inbounds %struct.screen, %struct.screen* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.screen*, %struct.screen** %2, align 8
  %9 = getelementptr inbounds %struct.screen, %struct.screen* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  br label %12

12:                                               ; preds = %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
